# spec-result-parser

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.beads/: metadata.json
.github/workflows/: ci.yml  publish.yml
conda/: meta.yaml
docs/specs/spec-result-parser/: design.md  proposal.md  research.md  spec.md  tasks.md  tech-stack.md
docs/superpowers/plans/: 2026-04-03-output-reporting-binary-psf.md
docs/superpowers/specs/: 2026-04-03-output-reporting-binary-psf-design.md
examples/: README.md
examples/bandgap/: README.md  spec.yaml
examples/bandgap/corners/: ff_m40.psf  fs_27.psf  sf_27.psf  ss_125.psf  tt_27.psf
examples/ldo_regulator/: README.md  spec.yaml
examples/ldo_regulator/corners/: ff_m40.mt0  fs_27.mt0  sf_27.mt0  ss_125.mt0  tt_27.mt0
examples/opamp_ota/: README.md  spec.yaml
examples/opamp_ota/corners/: ff_m40.psf  fs_27.psf  sf_27.psf  ss_125.psf  tt_27.psf
examples/opamp_ota/mc_runs/: mc_001.psf  mc_002.psf  mc_003.psf  mc_004.psf  mc_005.psf  (+15 more)
src/spec_result_parser/: __init__.py  checker.py  cli.py  corner_aggregator.py  evaluator.py  format_detector.py  models.py  monte_carlo.py  renderer.py  spec_loader.py
tests/: test_aggregate_cmd.py  test_check_cmd.py  test_checker.py  test_cli_output.py  test_corner_aggregator.py  test_csv_exporter.py  test_error_handling.py  test_evaluator.py  test_format_detector.py  test_hspice_parser.py  test_html_exporter.py  test_json_exporter.py  test_models.py  test_monte_carlo.py  test_psf_binary.py  test_psf_parser.py  test_renderer.py  test_scaffold.py  test_spec_loader.py
(+22 files in other folders)
