[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spec-result-parser"
version = "0.1.0"
description = "CLI tool for analog IC engineers to automate spec checking of Spectre PSF-ASCII and HSPICE MT0 simulation results"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Chu Phuc Cong", email = "congchu99@gmail.com" }]
keywords = ["analog", "IC", "EDA", "spectre", "HSPICE", "spec-check", "PSF"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "click>=8.0",
    "rich>=12.0",
    "PyYAML>=6.0",
    "pandas>=1.5",
]

[project.scripts]
spec-parser = "spec_result_parser.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/spec_result_parser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src/spec_result_parser"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
